# Domomo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  home_definition.json  main.cpp
lib/: JsonSpecificationReader.cpp  JsonSpecificationReader.hpp  MqttPublisher.cpp  MqttPublisher.hpp
lib/global_ble/: BluetoothPeripheral.hpp  BluetoothSupervisor.cpp  BluetoothSupervisor.hpp  SwitchBotBluetoothPeripheral.hpp  spec.hpp
script/: domomo.service
